[project]
name = "subburn"
version = "0.1.0"
description = "Create videos with burnt-in subtitles from audio or video files"
authors = [{ name = "Oliver Steele", email = "steele@osteele.com" }]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["black>=23.12.1", "mypy>=1.8.0", "ruff>=0.1.9", "pytest>=7.4.4"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]

[project.scripts]
subburn = "subburn.cli:main"
