[project]
name = "subburn"
version = "0.1.0"
description = "Create videos with burnt-in subtitles from audio or video files"
authors = [{ name = "Oliver Steele", email = "steele@osteele.com" }]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "openai>=1.6.0",
    "requests>=2.31.0",  # For downloading images
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pyright>=1.1.350", "ruff>=0.11.8", "pytest>=8.3.5"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "RUF"]
unfixable = ["B904", "SIM108"]
ignore = ["RUF001"]

# Ignore RUF001 warnings about CJK punctuation in utils.py
[tool.ruff.lint.per-file-ignores]
"src/subburn/utils.py" = ["RUF001"]

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
typeCheckingMode = "standard"

[project.scripts]
subburn = "subburn.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
