[project]
name = "subburn"
version = "0.1.0"
description = "Create videos with burnt-in subtitles from audio or video files"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Oliver Steele", email = "steele@osteele.com" }]
keywords = [
    "video",
    "subtitles",
    "language-learning",
    "transcription",
    "whisper",
]
urls = { Homepage = "https://github.com/osteele/subburn", "Bug Tracker" = "https://github.com/osteele/subburn/issues" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15.3",
    "rich>=14.0.0",
    "openai>=1.78.0",
    "requests>=2.31.0", # For downloading images
    "pypinyin>=0.54.0",
    "pydantic>=2.11.4",
    "jieba>=0.42.1",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.350",
    "ruff>=0.11.8",
    "pytest>=8.3.5",
    "xdg-base-dirs>=6.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "RUF"]
unfixable = ["B904", "SIM108"]
ignore = ["RUF001"]

# Ignore RUF001 warnings about CJK punctuation in utils.py
[tool.ruff.lint.per-file-ignores]
"src/subburn/utils.py" = ["RUF001"]

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
typeCheckingMode = "standard"

[project.scripts]
subburn = "subburn.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:invalid escape sequence.*:DeprecationWarning",
]
